--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ basedeps = mock>=1.3.0
            cryptography>=1.0
            pyopenssl>=0.14
            webtest
-           nose
+           pytest
            flask
            unittest2
            sqlalchemy
@@ -18,75 +18,72 @@ deps = {[testenv]basedeps}
 setenv =
     pypy: with_gmp=no
     DJANGO_SETTINGS_MODULE=tests.contrib.test_django_settings
-commands = nosetests --ignore-files=test_appengine\.py --ignore-files=test__appengine_ndb\.py {posargs}
+commands =
+    py.test \
+      --ignore=tests/contrib/test_appengine.py \
+      --ignore=tests/contrib/test__appengine_ndb.py \
+      {posargs}
 
 [coverbase]
 basepython = python2.7
 commands =
-    nosetests \
-      --with-coverage \
-      --cover-package=oauth2client \
-      --cover-package=tests \
-      --cover-erase \
-      --cover-tests \
-      --cover-branches \
-      --ignore-files=test_appengine\.py \
-      --ignore-files=test__appengine_ndb\.py
-    nosetests \
-      --with-coverage \
-      --cover-package=oauth2client.contrib.appengine \
-      --cover-package=oauth2client.contrib._appengine_ndb \
-      --cover-package=tests.contrib.test_appengine \
-      --cover-package=tests.contrib.test__appengine_ndb \
+    py.test \
+      --cov=oauth2client \
+      --cov=tests \
+      --ignore=tests/contrib/test_appengine.py \
+      --ignore=tests/contrib/test__appengine_ndb.py
+    py.test \
+      --cov=oauth2client.contrib.appengine \
+      --cov=oauth2client.contrib._appengine_ndb \
+      --cov=tests.contrib.test_appengine \
+      --cov=tests.contrib.test__appengine_ndb \
+      --cov-append \
       --with-gae \
-      --cover-tests \
-      --cover-branches \
-      --gae-application=tests/data \
-      --gae-lib-root={env:GAE_PYTHONPATH:google_appengine} \
-      --logging-level=INFO \
+      --gae-project-path=tests/data \
+      --gae-path={env:GAE_PYTHONPATH:google_appengine} \
       tests/contrib/test_appengine.py \
       tests/contrib/test__appengine_ndb.py
 deps = {[testenv]deps}
     coverage
-    nosegae
+    pytest-cov
+    # pytest_gae  # TODO: Move to official source when it is updated
+    -egit+https://github.com/MiCHiLU/pytest_gae#egg=tablib
 
 [testenv:py26]
 basepython =
     python2.6
 commands =
-    nosetests \
-      --ignore-files=test_appengine\.py \
-      --ignore-files=test__appengine_ndb\.py \
-      --ignore-files=test_django_orm\.py \
-      --ignore-files=test_django_settings\.py \
-      --ignore-files=test_django_util\.py \
-      --ignore-files=test_keyring_storage\.py \
-      --exclude-dir=oauth2client/contrib/django_util \
+    py.test \
+      --ignore=tests/contrib/test_appengine.py \
+      --ignore=tests/contrib/test__appengine_ndb.py \
+      --ignore=tests/contrib/test_django_orm.py \
+      --ignore=tests/contrib/test_django_settings.py \
+      --ignore=tests/contrib/test_django_util.py \
+      --ignore=tests/contrib/test_keyring_storage.py \
+      --ignore=oauth2client/contrib/django_util \
       {posargs}
 deps = {[testenv]basedeps}
-       nose-exclude
 
 [testenv:py33]
 basepython =
     python3.3
 commands =
-    nosetests \
-      --ignore-files=test_appengine\.py \
-      --ignore-files=test__appengine_ndb\.py \
-      --ignore-files=test_django_orm\.py \
-      --ignore-files=test_django_settings\.py \
-      --ignore-files=test_django_util\.py \
-      --exclude-dir=oauth2client/contrib/django_util \
+    py.test \
+      --ignore=tests/contrib/test_appengine.py \
+      --ignore=tests/contrib/test__appengine_ndb.py \
+      --ignore=tests/contrib/test_django_orm.py \
+      --ignore=tests/contrib/test_django_settings.py \
+      --ignore=tests/contrib/test_django_util.py \
+      --ignore=oauth2client/contrib/django_util \
       {posargs}
 deps = {[testenv]basedeps}
        keyring
-       nose-exclude
 
 [testenv:cover]
 basepython = {[coverbase]basepython}
 commands =
     {[coverbase]commands}
-    coverage report --show-missing --cover-min-percentage=100
+    coverage report --show-missing --fail-under=100
 deps =
     {[coverbase]deps}
 
@@ -115,13 +112,13 @@ commands = {toxinidir}/scripts/build_docs.sh
 [testenv:gae]
 basepython = python2.7
 deps = {[testenv]basedeps}
-       nosegae
+    # pytest_gae  # TODO: Move to official source when it is updated
+    -egit+https://github.com/MiCHiLU/pytest_gae#egg=tablib
 commands =
-    nosetests \
+    py.test \
       --with-gae \
-      --gae-lib-root={env:GAE_PYTHONPATH:google_appengine} \
-      --gae-application=tests/data \
-      --logging-level=INFO \
+      --gae-path={env:GAE_PYTHONPATH:google_appengine} \
+      --gae-project-path=tests/data \
       tests/contrib/test_appengine.py \
       tests/contrib/test__appengine_ndb.py
 
