--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ basedeps = mock>=1.3.0
            pyopenssl>=0.14
            webtest
            pytest
+           pytest-raisesregexp 
            flask
            unittest2
            sqlalchemy
